--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,8 +37,10 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: ^/warranties, roles: ROLE_USER }
+        - { path: ^/account, roles: ROLE_USER }
+        - { path: ^/add_warranty, roles: ROLE_USER }
+        - { path: ^/edit_warranty, roles: ROLE_USER }
 
 when@test:
     security:
